--- a/test.html
+++ b/test.html
@@ -1,3 +1,14 @@
-<h1>Hey. I'm a big heading</h1>
-<p>Hey. I'm a paragraph element. Cool huh? </p>
-<a href="http://google.com" target="_blank" title="Let's go to Google">Click me! I am a link</a>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Test page</title>
+</head>
+<body>
+	<h1>Hey. I'm a big heading</h1>
+	<p>Hey. I'm a <b>paragraph</b> element. Cool huh? </p>
+	<a href="http://google.com" target="_blank" title="Let's go to Google">Click me! I am a link</a>
+	<p>My name is:<br>
+	Nguyen Tien Dat</p>
+	<img src="https://natusan.co.uk/cdn/shop/articles/natusan-blog-how-cat-years-work-header.jpg?v=1674474680">
+</body>
+<html>
