--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
 	<title>Wreck-it Ralph</title>
 	<link rel="icon" href="img/ralph-avatar.jpeg">
+	<!-- import the font from Google -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/hero.css">
 </head>
 <body>
 	<!-- header element -->
@@ -16,7 +21,7 @@
 		<h2>About Ralph</h2>
 		<p>Ralph is awsome! He is an 8-bit videogame bad guy who travels the length of the arcade to prove that he's a good guy.</p>
 		<img src="img/ralph-large.jpeg">
-		<p>Ralph and his friends</p>
+		<p class="caption">Ralph and his friends</p>
 
 		<!-- Characteristics -->
 		<h2>Ralph's Characteristics</h2> 
